--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "author": "Emma",
   "license": "ISC",
-  "type":"module",
+  "type": "module",
   "dependencies": {
-    "inquirer": "^9.2.12"
+    "inquirer": "^9.2.12",
+    "qr-image": "^3.2.0"
   }
 }
